# accelerate-blas

./: LICENSE  README.md  accelerate-blas-test.hs  accelerate-blas.cabal
src/Data/Array/Accelerate/: BLAS.hs
src/Data/Array/Accelerate/BLAS/: Common.hs  Internal.hs  Level1.hs
src/Data/Array/Accelerate/BLAS/Internal/: Asum.hs  Axpy.hs  Common.hs  Dot.hs  Nrm2.hs  Scal.hs
